Fix vertical alignment issue, try to find a compromise with tablet viewport sizes

--- a/packages/block-library/src/columns/style.scss
+++ b/packages/block-library/src/columns/style.scss
@@ -10,6 +10,10 @@
 		flex-wrap: nowrap !important;
 	}
 
+	// Ensure full vertical column stretch when alignment is not set.
+	// This overrides the Layout block support's default align-items setting of `center`.
+	align-items: initial !important;
+
 	/**
 	* All Columns Alignment
 	*/
@@ -32,23 +36,14 @@
 			flex-basis: 100% !important;
 		}
 
-		// Between mobile and large viewports, allow 2 columns.
-		// @media (min-width: #{ ($break-small) }) and (max-width: #{ ($break-medium - 1) }) {
-		// 	// Only add two column styling if there are two or more columns
-		// 	&:not(:only-child) {
-		// 		// As with mobile styles, this must be important since the Column
-		// 		// assigns its own width as an inline style, which should take effect
-		// 		// starting at `break-medium`.
-		// 		flex-basis: calc(50% - calc(var(--wp--style--block-gap, 2em) / 2)) !important;
-		// 		flex-grow: 0;
-		// 	}
-
-		// 	// Add space between the multiple columns. Themes can customize this if they wish to work differently.
-		// 	// Only apply this beyond the mobile breakpoint, as there's only a single column on mobile.
-		// 	&:nth-child(even) {
-		// 		margin-left: var(--wp--style--block-gap, 2em);
-		// 	}
-		// }
+		// Between mobile and large viewports, allow wrap and for columns to shrink.
+		@media (min-width: #{ ($break-small) }) and (max-width: #{ ($break-medium - 1) }) {
+			// Only add ability to shrink if there are two or more columns.
+			&:not(:only-child) {
+				flex-grow: 1;
+				flex-shrink: 1;
+			}
+		}
 
 		// At large viewports, show all columns horizontally.
 		@include break-medium() {
